<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:layout_height="0dp">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="@drawable/block_register"
                android:theme="@style/Theme.CodeCat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.06"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/_33sdp"
                    android:layout_height="@dimen/_33sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:background="@drawable/logo_block"
                    android:paddingStart="@dimen/_1sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_30sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/signin"
                    android:textSize="@dimen/_24sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/signin2"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextSizeCheck" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:layout_weight="0.5"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:layout_weight="0.5"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_25sdp"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:layout_weight="0.4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingEnd="@dimen/_25sdp"
            android:paddingStart="@dimen/_25sdp"
            android:orientation="vertical"
            android:background="@drawable/block_auth"
            android:layout_weight="0.5">
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.15"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_height="0dp">

                    <EditText
                        android:id="@+id/email_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/edittext_block"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:drawablePadding="@dimen/_7sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_5sdp"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="#37474F"
                        android:textSize="@dimen/_12ssp" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@null"
                    android:layout_weight="0.15"/>


                    <EditText
                        android:id="@+id/password_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textSize="@dimen/_12ssp"
                        android:background="@drawable/edittext_block"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:drawablePadding="@dimen/_7sdp"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_5sdp"
                        android:textColor="@color/dark_gray"
                        android:textColorHint="#37474F"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="0dp">
                <Button
                    android:fontFamily="@font/roboto_bold"
                    android:id="@+id/login_button"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textAllCaps="false"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:textSize="@dimen/_11ssp"
                    android:text="@string/signin3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/forgot_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/purple_100"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"/>
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_weight="0.02"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/first"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.01"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/register_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.05"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>